Fix sidepanel org selection z-index
`nav-sidepanel__space-open-indicator` toggle arrows on the space
selector list blow the organization selector list were displayed on top
of the organization selector.

--- a/src/stylesheets/modules/sidepanel.styl
+++ b/src/stylesheets/modules/sidepanel.styl
@@ -101,6 +101,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08)
   border: 1px solid $colors.element-mid
   display: flex
+  z-index: 1
   transition: all 0.2s ease-in-out
   cursor: auto
 
